# vcpkg-github-cache-canary

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp  vcpkg.json
.github/workflows/: canary.yml
